--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "video-encoder",
   "version": "0.0.1",
-  "main": "main.js",
+  "main": "./src/main.js",
   "scripts": {
     "start": "electron ."
   }
